--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=8080
 
-MONGO_DB_URL=
+MONGO_DB_URL=mongodb+srv://root:tTSX93jcaZ0jdhLZ@mern-learn.8g9yxqj.mongodb.net/jwtnodejs
