--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "api-query-params": "^5.4.0",
     "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
