--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=8080
 
-# MONGO_DB_URL=mongodb+srv://root:tTSX93jcaZ0jdhLZ@mern-learn.8g9yxqj.mongodb.net/portal-backend
-MONGO_DB_URL=mongodb://root:123456@localhost:27018/portal-backend?authSource=admin
+MONGO_DB_URL=mongodb+srv://root:tTSX93jcaZ0jdhLZ@mern-learn.8g9yxqj.mongodb.net/portal-backend
+# MONGO_DB_URL=mongodb://root:123456@localhost:27018/portal-backend?authSource=admin
 
 JWT_SECRET=4fc0f7b3-87cd-4683-b662-2c3e32302a6d
 JWT_EXPIRE=1d
