--- a/compose.yaml
+++ b/compose.yaml
@@ -17,30 +17,34 @@ services:
     image: ghcr.io/blackthornyugen/mongo-express-docker:v1.0.0
     container_name: mexpress-portal
     environment:
-      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
-      - ME_CONFIG_MONGODB_URL=mongodb://root:123456@mongodb:27017/?authSource=admin
-      - ME_CONFIG_BASICAUTH_USERNAME=user
-      - ME_CONFIG_BASICAUTH_PASSWORD=123456
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+      ME_CONFIG_MONGODB_URL: mongodb://root:123456@mongodb:27017/?authSource=admin
+      ME_CONFIG_BASICAUTH_USERNAME: user
+      ME_CONFIG_BASICAUTH_PASSWORD: 123456
     depends_on:
       - mongodb
     restart: unless-stopped
     ports:
       - "9000:8081"
-  # backend:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: backend-portal
-  #   # restart: unless-stopped
-  #   environment:
-  #     NODE_ENV: development
-  #     PORT: 8080
-  #     MONGO_DB_URL: mongodb://root:123456@localhost:27018/portal-backend?authSource=admin
-  #     JWT_SECRET: 4fc0f7b3-87cd-4683-b662-2c3e32302a6d
-  #     JWT_EXPIRE: 1d
-  #   ports:
-  #     - 8080:8080
 
-  # docker compose -p portal-container up --build -d
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: backend-portal
+    restart: unless-stopped
+    environment:
+      NODE_ENV: development
+      PORT: 8080
+      MONGO_DB_URL: mongodb://root:123456@mongodb:27017/portal-backend?authSource=admin
+      JWT_SECRET: 4fc0f7b3-87cd-4683-b662-2c3e32302a6d
+      JWT_EXPIRE: 1d
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongodb
+
 volumes:
   mongodb_data_container:
+
+    #docker compose -p portal-container up --build -d
